# asg

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  TUTORIAL.md
.github/workflows/: ci.yml  release.yml
asg-lsp/: Cargo.toml
asg-lsp/src/: completion.rs  definition.rs  diagnostics.rs  hover.rs  main.rs  server.rs
asg-pkg/: Cargo.toml
asg-pkg/src/: commands.rs  installer.rs  main.rs  manifest.rs  registry.rs  resolver.rs
benches/: interpreter_bench.rs  serialization_bench.rs
benchmarks/: README.md  fact.asg  fact.js  fact.lua  fact.py  fib.asg  fib.js  fib.lua  fib.py  interpreter_bench.rs  primes.asg  primes.js  primes.lua  primes.py  run_all.bat  serialization_bench.rs  sum.asg  sum.js  sum.lua  sum.py
docs/: BUILTIN_FUNCTIONS.md  CHEATSHEET.md  LANGUAGE_SPEC.md  PATTERNS.md  QUICKSTART.md  STDLIB.md  edge_types.md  edge_types_ru.md  getting_started.md  getting_started_ru.md  node_types.md  node_types_ru.md  tutorial.md
examples/: advanced.asg  api_server.asg  arrays.asg  autograd_demo.rs  basics.asg  calculator_gui.asg  calculator_tui.asg  calculator_web.asg  closures.asg  comprehensions.asg  comprehensive_test.asg  conditionals.asg  data_processing.asg  demo.asg  destructuring.asg  dict.asg  errors.asg  factorial.asg  fibonacci.asg  fibonacci.rs  file_io.asg  file_processing.rs  functions.asg  guess_game.asg  higher_order.asg  http_server.rs  lazy.asg  lib_math.asg  llm_examples.asg  loops.asg  mandelbrot.asg  match_simple.asg  match_test.asg  math.asg  modules.asg  parser_demo.rs  pattern_matching.asg  pipe.asg  ranges.asg  records.asg  (+6 more)
src/: ai_api.rs  asg.rs  c_backend.rs  compiler.rs  concurrency.rs  concurrency_async.rs  effects.rs  error.rs  ffi.rs  gui.rs  interpreter.rs  js_backend.rs  lib.rs  llvm_backend.rs  macros.rs  nodecodes.rs  proof.rs  proof_dsl.rs  proof_smt.rs  syn1.rs  syn1_writer.rs  testing.rs  type_checker.rs  types.rs  wasm_backend.rs
src/modules/: loader.rs  mod.rs  registry.rs  resolver.rs
src/ops/: mod.rs  tensor_ops.rs
src/parser/: builder.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/runtime/: diff_tensor.rs  mod.rs
src/tests/: tests.rs
src/tools/: graphviz_exporter.rs
src/tools/vscode_plugin/: README.md  README.ru.md
src/wasm/: gc.rs  mod.rs  runtime.rs  types.rs
stdlib/: cli.asg  crypto.asg  datetime.asg  encoding.asg  env.asg  file.asg  functional.asg  http.asg  io.asg  json.asg  list.asg  math.asg  prelude.asg  regex.asg  string.asg  testing.asg  validation.asg
tutorial/: 00-getting-started.asg  01-web-server.asg  02-cli-tool.asg  03-data-processing.asg  04-functional.asg  README.md
vscode-asg/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-asg/snippets/: asg.json
vscode-asg/src/: extension.ts
vscode-asg/syntaxes/: asg.tmLanguage.json
