[package]
name = "asg-lsp"
version = "1.0.2"
edition = "2021"
authors = ["Xzdes <xzdes@yandex.com>"]
description = "Language Server Protocol (LSP) implementation for ASG programming language"
license = "MIT"
repository = "https://github.com/Xzdes/asg"
keywords = ["asg", "lsp", "language-server", "ide"]
categories = ["development-tools", "text-editors"]

[dependencies]
asg-lang = "1.0.2"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "asg-lsp"
path = "src/main.rs"
